// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`passportForm render should render passport fields 1`] = `
<div>
  <div>
    <form
      class="passport-form form"
      name="passport"
      novalidate=""
    >
      <fieldset>
        <div
          class="passport-form--passenger"
        >
          <p
            class="passport-form--passenger-label"
          >
            SHARED__PLACEHOLDER__PASSENGER
          </p>
          <span
            class="passport-form--passenger-name"
          >
            fake name
          </span>
        </div>
        <div
          class="segments"
        >
          <div
            class="passport-form--info secondary segment"
          >
            <div
              class="gray5"
            >
              SHARED__PLACEHOLDER__PASSPORT_INFORMATION
            </div>
            <div
              class="field"
            >
              <div
                class="mask-field input"
              >
                <input
                  class=""
                  placeholder="Passport Number"
                  value="XXXXXAAAA"
                />
              </div>
            </div>
            <div
              class="field"
            >
              <a
                class="nav-item-link nav-item-field"
                name="passportIssuedBy"
              >
                <div
                  class="fullwidth"
                >
                  <span>
                    Passport was Issued by:
                  </span>
                  <div
                    class="nav-item-field-value"
                    data-qa="nav-item-field-value"
                  >
                    American Samoa - AS
                  </div>
                </div>
                <i
                  class="nav-item-link--icon icon icon_keyboard-arrow-right"
                />
              </a>
            </div>
            <div
              class="field"
            >
              <a
                class="nav-item-link nav-item-field"
                name="nationality"
              >
                <div
                  class="fullwidth"
                >
                  <span>
                    Nationality
                  </span>
                  <div
                    class="nav-item-field-value"
                    data-qa="nav-item-field-value"
                  >
                    Angola - AO
                  </div>
                </div>
                <i
                  class="nav-item-link--icon icon icon_keyboard-arrow-right"
                />
              </a>
            </div>
            <div
              class="fields grouped"
            >
              <label
                class="fields--label"
              >
                Passport Expiration Date
              </label>
              <div
                class="field"
              >
                <div
                  class="date-selection"
                >
                  <div
                    class="date-selection--select date-selection-month"
                  >
                    <div
                      class="select-input icon-fixed formatted input"
                    >
                      <span
                        class="formatted-input formatted-input--fill"
                      >
                        <select
                          class="dropdown"
                          data-qa="select-dropdown"
                          placeholder="Month"
                        >
                          <option
                            class="placeholder"
                            data-qa="dqa-disabled-option"
                            disabled=""
                            value=""
                          >
                            Month
                          </option>
                          <option
                            data-qa="dqa-disabled-option"
                            disabled=""
                            value="1"
                          >
                            January
                          </option>
                          <option
                            data-qa="dqa-disabled-option"
                            disabled=""
                            value="2"
                          >
                            February
                          </option>
                          <option
                            data-qa="dqa-disabled-option"
                            disabled=""
                            value="3"
                          >
                            March
                          </option>
                          <option
                            data-qa="dqa-disabled-option"
                            disabled=""
                            value="4"
                          >
                            April
                          </option>
                          <option
                            data-qa="dqa-disabled-option"
                            disabled=""
                            value="5"
                          >
                            May
                          </option>
                          <option
                            data-qa="dqa-disabled-option"
                            disabled=""
                            value="6"
                          >
                            June
                          </option>
                          <option
                            data-qa="dqa-disabled-option"
                            disabled=""
                            value="7"
                          >
                            July
                          </option>
                          <option
                            data-qa="dqa-disabled-option"
                            disabled=""
                            value="8"
                          >
                            August
                          </option>
                          <option
                            data-qa="dqa-disabled-option"
                            disabled=""
                            value="9"
                          >
                            September
                          </option>
                          <option
                            data-qa="dqa-disabled-option"
                            disabled=""
                            value="10"
                          >
                            October
                          </option>
                          <option
                            data-qa="dqa-disabled-option"
                            disabled=""
                            value="11"
                          >
                            November
                          </option>
                          <option
                            data-qa="dqa-disabled-option"
                            disabled=""
                            value="12"
                          >
                            December
                          </option>
                        </select>
                      </span>
                      <input
                        class=""
                        icon="caret-down"
                        placeholder="Month"
                      />
                      <i
                        class="icon icon_caret-down"
                      />
                    </div>
                  </div>
                  <div
                    class="date-selection--select date-selection-date"
                  >
                    <div
                      class="select-input icon-fixed formatted input"
                    >
                      <span
                        class="formatted-input formatted-input--fill"
                      >
                        <select
                          class="dropdown"
                          data-qa="select-dropdown"
                          placeholder="Day"
                        >
                          <option
                            class="placeholder"
                            data-qa="dqa-disabled-option"
                            disabled=""
                            value=""
                          >
                            Day
                          </option>
                          <option
                            data-qa="dqa-disabled-option"
                            disabled=""
                            value="1"
                          >
                            1
                          </option>
                          <option
                            data-qa="dqa-disabled-option"
                            disabled=""
                            value="2"
                          >
                            2
                          </option>
                          <option
                            data-qa="dqa-disabled-option"
                            disabled=""
                            value="3"
                          >
                            3
                          </option>
                          <option
                            data-qa="dqa-disabled-option"
                            disabled=""
                            value="4"
                          >
                            4
                          </option>
                          <option
                            data-qa="dqa-disabled-option"
                            disabled=""
                            value="5"
                          >
                            5
                          </option>
                          <option
                            data-qa="dqa-disabled-option"
                            disabled=""
                            value="6"
                          >
                            6
                          </option>
                          <option
                            data-qa="dqa-disabled-option"
                            disabled=""
                            value="7"
                          >
                            7
                          </option>
                          <option
                            data-qa="dqa-disabled-option"
                            disabled=""
                            value="8"
                          >
                            8
                          </option>
                          <option
                            data-qa="dqa-disabled-option"
                            disabled=""
                            value="9"
                          >
                            9
                          </option>
                          <option
                            data-qa="dqa-disabled-option"
                            disabled=""
                            value="10"
                          >
                            10
                          </option>
                          <option
                            data-qa="dqa-disabled-option"
                            disabled=""
                            value="11"
                          >
                            11
                          </option>
                          <option
                            data-qa="dqa-disabled-option"
                            disabled=""
                            value="12"
                          >
                            12
                          </option>
                          <option
                            data-qa="dqa-disabled-option"
                            disabled=""
                            value="13"
                          >
                            13
                          </option>
                          <option
                            data-qa="dqa-disabled-option"
                            disabled=""
                            value="14"
                          >
                            14
                          </option>
                          <option
                            data-qa="dqa-disabled-option"
                            disabled=""
                            value="15"
                          >
                            15
                          </option>
                          <option
                            data-qa="dqa-disabled-option"
                            disabled=""
                            value="16"
                          >
                            16
                          </option>
                          <option
                            data-qa="dqa-disabled-option"
                            disabled=""
                            value="17"
                          >
                            17
                          </option>
                          <option
                            data-qa="dqa-disabled-option"
                            disabled=""
                            value="18"
                          >
                            18
                          </option>
                          <option
                            data-qa="dqa-disabled-option"
                            disabled=""
                            value="19"
                          >
                            19
                          </option>
                          <option
                            data-qa="dqa-disabled-option"
                            disabled=""
                            value="20"
                          >
                            20
                          </option>
                          <option
                            data-qa="dqa-disabled-option"
                            disabled=""
                            value="21"
                          >
                            21
                          </option>
                          <option
                            data-qa="dqa-disabled-option"
                            disabled=""
                            value="22"
                          >
                            22
                          </option>
                          <option
                            data-qa="dqa-disabled-option"
                            disabled=""
                            value="23"
                          >
                            23
                          </option>
                          <option
                            data-qa="dqa-disabled-option"
                            disabled=""
                            value="24"
                          >
                            24
                          </option>
                          <option
                            data-qa="dqa-disabled-option"
                            disabled=""
                            value="25"
                          >
                            25
                          </option>
                          <option
                            data-qa="dqa-disabled-option"
                            disabled=""
                            value="26"
                          >
                            26
                          </option>
                          <option
                            data-qa="dqa-disabled-option"
                            disabled=""
                            value="27"
                          >
                            27
                          </option>
                          <option
                            data-qa="dqa-disabled-option"
                            disabled=""
                            value="28"
                          >
                            28
                          </option>
                          <option
                            data-qa="dqa-disabled-option"
                            disabled=""
                            value="29"
                          >
                            29
                          </option>
                          <option
                            data-qa="dqa-disabled-option"
                            disabled=""
                            value="30"
                          >
                            30
                          </option>
                        </select>
                      </span>
                      <input
                        class=""
                        icon="caret-down"
                        placeholder="Day"
                      />
                      <i
                        class="icon icon_caret-down"
                      />
                    </div>
                  </div>
                  <div
                    class="date-selection--select date-selection-year"
                  >
                    <div
                      class="select-input icon-fixed formatted input"
                    >
                      <span
                        class="formatted-input formatted-input--fill"
                      >
                        <select
                          class="dropdown"
                          data-qa="select-dropdown"
                          placeholder="Year"
                        >
                          <option
                            class="placeholder"
                            data-qa="dqa-disabled-option"
                            disabled=""
                            value=""
                          >
                            Year
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="2024"
                          >
                            2024
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="2025"
                          >
                            2025
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="2026"
                          >
                            2026
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="2027"
                          >
                            2027
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="2028"
                          >
                            2028
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="2029"
                          >
                            2029
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="2030"
                          >
                            2030
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="2031"
                          >
                            2031
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="2032"
                          >
                            2032
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="2033"
                          >
                            2033
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="2034"
                          >
                            2034
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="2035"
                          >
                            2035
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="2036"
                          >
                            2036
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="2037"
                          >
                            2037
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="2038"
                          >
                            2038
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="2039"
                          >
                            2039
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="2040"
                          >
                            2040
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="2041"
                          >
                            2041
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="2042"
                          >
                            2042
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="2043"
                          >
                            2043
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="2044"
                          >
                            2044
                          </option>
                        </select>
                      </span>
                      <input
                        class=""
                        icon="caret-down"
                        placeholder="Year"
                      />
                      <i
                        class="icon icon_caret-down"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="field"
            >
              <a
                class="nav-item-link nav-item-field"
                name="countryOfResidence"
              >
                <div
                  class="fullwidth"
                >
                  <span>
                    Country of Residence
                  </span>
                  <div
                    class="nav-item-field-value"
                    data-qa="nav-item-field-value"
                  >
                    United States of America - US
                  </div>
                </div>
                <i
                  class="nav-item-link--icon icon icon_keyboard-arrow-right"
                />
              </a>
            </div>
          </div>
          <div
            class="passport-form--emergency-contact secondary segment"
          >
            <div>
              <div
                class="passport-form--emergency-contact-header"
              >
                SHARED__PLACEHOLDER__EMERGENCY_CONTACT_OPTIONAL
              </div>
              <div
                class="field"
              >
                <div
                  class="input"
                >
                  <input
                    class=""
                    name="emergencyContactName"
                    placeholder="Name"
                    value="TEST NAME"
                  />
                </div>
              </div>
              <div
                class="field phone-number-field mt4 phone-number-field--international"
              >
                <div
                  class="labeled input large"
                >
                  <div
                    class="input--label mr4"
                  >
                    +1
                  </div>
                  <input
                    label="+1"
                    name="emergencyContactPhoneNumber"
                    placeholder="SHARED__PLACEHOLDER__PHONE_NUMBER"
                    type="tel"
                    value="213-131-2321"
                  />
                </div>
              </div>
              <div
                class="field"
              >
                <div
                  class="form-radio-field mt5 hide"
                >
                  <div
                    class="form-radio-field--tips"
                  >
                    CHECK_IN__USE_FOR_ALL_PASSENGERS
                  </div>
                  <div
                    class="form-radio-field--radio"
                  >
                    <span
                      class="radio-button--mark"
                    >
                      <span
                        class="radio-input--mark"
                      />
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="field"
            >
              <div
                class="form-radio-field mt4 hide"
              >
                <div
                  class="form-radio-field--tips"
                >
                  SHARED__PLACEHOLDER__EMERGENCY_CONTACT_TOGGLE
                </div>
                <div
                  class="form-radio-field--radio"
                >
                  <span
                    class="radio-button--mark"
                  >
                    <span
                      class="radio-input--mark"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="passport-form--save-button segment"
          >
            <button
              class="continue  button button--fluid huge button--yellow"
              type="submit"
            >
              submit
            </button>
          </div>
        </div>
      </fieldset>
    </form>
  </div>
</div>
`;

exports[`passportForm render should render passport page when Intl Must Ride PNR created in ARD (partially populated passport data) 1`] = `
<div>
  <div>
    <form
      class="passport-form form"
      name="passport"
      novalidate=""
    >
      <fieldset>
        <div
          class="passport-form--passenger"
        >
          <p
            class="passport-form--passenger-label"
          >
            SHARED__PLACEHOLDER__PASSENGER
          </p>
          <span
            class="passport-form--passenger-name"
          >
            fake name
          </span>
        </div>
        <div
          class="segments"
        >
          <div
            class="passport-form--info secondary segment"
          >
            <div
              class="gray5"
            >
              SHARED__PLACEHOLDER__PASSPORT_INFORMATION
            </div>
            <div
              class="field"
            >
              <div
                class="mask-field input"
              >
                <input
                  class=""
                  placeholder="Passport Number"
                  value=""
                />
              </div>
            </div>
            <div
              class="field"
            >
              <a
                class="nav-item-link nav-item-field"
                name="passportIssuedBy"
              >
                <div
                  class="fullwidth"
                >
                  <span>
                    Passport was Issued by:
                  </span>
                  <div
                    class="nav-item-field-value"
                    data-qa="nav-item-field-value"
                  >
                    United States of America - US
                  </div>
                </div>
                <i
                  class="nav-item-link--icon icon icon_keyboard-arrow-right"
                />
              </a>
            </div>
            <div
              class="field"
            >
              <a
                class="nav-item-link nav-item-field"
                name="nationality"
              >
                <div
                  class="fullwidth"
                >
                  <span>
                    Nationality
                  </span>
                  <div
                    class="nav-item-field-value"
                    data-qa="nav-item-field-value"
                  >
                    United States of America - US
                  </div>
                </div>
                <i
                  class="nav-item-link--icon icon icon_keyboard-arrow-right"
                />
              </a>
            </div>
            <div
              class="fields grouped"
            >
              <label
                class="fields--label"
              >
                Passport Expiration Date
              </label>
              <div
                class="field"
              >
                <div
                  class="date-selection"
                >
                  <div
                    class="date-selection--select date-selection-month"
                  >
                    <div
                      class="select-input icon-fixed formatted input"
                    >
                      <span
                        class="formatted-input formatted-input--fill"
                      >
                        <select
                          class="dropdown empty"
                          data-qa="select-dropdown"
                          placeholder="Month"
                        >
                          <option
                            class="placeholder"
                            data-qa="dqa-disabled-option"
                            disabled=""
                            value=""
                          >
                            Month
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="1"
                          >
                            January
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="2"
                          >
                            February
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="3"
                          >
                            March
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="4"
                          >
                            April
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="5"
                          >
                            May
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="6"
                          >
                            June
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="7"
                          >
                            July
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="8"
                          >
                            August
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="9"
                          >
                            September
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="10"
                          >
                            October
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="11"
                          >
                            November
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="12"
                          >
                            December
                          </option>
                        </select>
                      </span>
                      <input
                        class=""
                        icon="caret-down"
                        placeholder="Month"
                      />
                      <i
                        class="icon icon_caret-down"
                      />
                    </div>
                  </div>
                  <div
                    class="date-selection--select date-selection-date"
                  >
                    <div
                      class="select-input icon-fixed formatted input"
                    >
                      <span
                        class="formatted-input formatted-input--fill"
                      >
                        <select
                          class="dropdown empty"
                          data-qa="select-dropdown"
                          placeholder="Day"
                        >
                          <option
                            class="placeholder"
                            data-qa="dqa-disabled-option"
                            disabled=""
                            value=""
                          >
                            Day
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="1"
                          >
                            1
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="2"
                          >
                            2
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="3"
                          >
                            3
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="4"
                          >
                            4
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="5"
                          >
                            5
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="6"
                          >
                            6
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="7"
                          >
                            7
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="8"
                          >
                            8
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="9"
                          >
                            9
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="10"
                          >
                            10
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="11"
                          >
                            11
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="12"
                          >
                            12
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="13"
                          >
                            13
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="14"
                          >
                            14
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="15"
                          >
                            15
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="16"
                          >
                            16
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="17"
                          >
                            17
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="18"
                          >
                            18
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="19"
                          >
                            19
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="20"
                          >
                            20
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="21"
                          >
                            21
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="22"
                          >
                            22
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="23"
                          >
                            23
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="24"
                          >
                            24
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="25"
                          >
                            25
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="26"
                          >
                            26
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="27"
                          >
                            27
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="28"
                          >
                            28
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="29"
                          >
                            29
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="30"
                          >
                            30
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="31"
                          >
                            31
                          </option>
                        </select>
                      </span>
                      <input
                        class=""
                        icon="caret-down"
                        placeholder="Day"
                      />
                      <i
                        class="icon icon_caret-down"
                      />
                    </div>
                  </div>
                  <div
                    class="date-selection--select date-selection-year"
                  >
                    <div
                      class="select-input icon-fixed formatted input"
                    >
                      <span
                        class="formatted-input formatted-input--fill"
                      >
                        <select
                          class="dropdown empty"
                          data-qa="select-dropdown"
                          placeholder="Year"
                        >
                          <option
                            class="placeholder"
                            data-qa="dqa-disabled-option"
                            disabled=""
                            value=""
                          >
                            Year
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="2024"
                          >
                            2024
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="2025"
                          >
                            2025
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="2026"
                          >
                            2026
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="2027"
                          >
                            2027
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="2028"
                          >
                            2028
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="2029"
                          >
                            2029
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="2030"
                          >
                            2030
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="2031"
                          >
                            2031
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="2032"
                          >
                            2032
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="2033"
                          >
                            2033
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="2034"
                          >
                            2034
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="2035"
                          >
                            2035
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="2036"
                          >
                            2036
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="2037"
                          >
                            2037
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="2038"
                          >
                            2038
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="2039"
                          >
                            2039
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="2040"
                          >
                            2040
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="2041"
                          >
                            2041
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="2042"
                          >
                            2042
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="2043"
                          >
                            2043
                          </option>
                          <option
                            data-qa="dqa-enabled-option"
                            value="2044"
                          >
                            2044
                          </option>
                        </select>
                      </span>
                      <input
                        class=""
                        icon="caret-down"
                        placeholder="Year"
                      />
                      <i
                        class="icon icon_caret-down"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="field"
            >
              <a
                class="nav-item-link nav-item-field"
                name="countryOfResidence"
              >
                <div
                  class="fullwidth"
                >
                  <span>
                    Country of Residence
                  </span>
                  <div
                    class="nav-item-field-value"
                    data-qa="nav-item-field-value"
                  >
                    United States of America - US
                  </div>
                </div>
                <i
                  class="nav-item-link--icon icon icon_keyboard-arrow-right"
                />
              </a>
            </div>
          </div>
          <div
            class="passport-form--emergency-contact secondary segment"
          >
            <div>
              <div
                class="passport-form--emergency-contact-header"
              >
                SHARED__PLACEHOLDER__EMERGENCY_CONTACT_OPTIONAL
              </div>
              <div
                class="field"
              >
                <div
                  class="input"
                >
                  <input
                    class=""
                    name="emergencyContactName"
                    placeholder="Name"
                    value=""
                  />
                </div>
              </div>
              <div
                class="field phone-number-field mt4 phone-number-field--international"
              >
                <div
                  class="labeled input large"
                >
                  <div
                    class="input--label mr4"
                  >
                    +undefined
                  </div>
                  <input
                    label="+undefined"
                    name="emergencyContactPhoneNumber"
                    placeholder="SHARED__PLACEHOLDER__PHONE_NUMBER"
                    type="tel"
                    value=""
                  />
                </div>
              </div>
              <div
                class="field"
              >
                <div
                  class="form-radio-field mt5 hide"
                >
                  <div
                    class="form-radio-field--tips"
                  >
                    CHECK_IN__USE_FOR_ALL_PASSENGERS
                  </div>
                  <div
                    class="form-radio-field--radio"
                  >
                    <span
                      class="radio-button--mark"
                    >
                      <span
                        class="radio-input--mark"
                      />
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="field"
            >
              <div
                class="form-radio-field mt4 hide"
              >
                <div
                  class="form-radio-field--tips"
                >
                  SHARED__PLACEHOLDER__EMERGENCY_CONTACT_TOGGLE
                </div>
                <div
                  class="form-radio-field--radio"
                >
                  <span
                    class="radio-button--mark"
                  >
                    <span
                      class="radio-input--mark"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="passport-form--save-button segment"
          >
            <button
              class="continue  button button--fluid huge button--yellow"
              type="submit"
            >
              submit
            </button>
          </div>
        </div>
      </fieldset>
    </form>
  </div>
</div>
`;
